--- a/Client/Shared/Produtos/ManterProdutoModalComponent.razor
+++ b/Client/Shared/Produtos/ManterProdutoModalComponent.razor
@@ -1,7 +1,9 @@
-﻿
+﻿@using WebAdmin.Client.Shared.Produtos
+@using WebAdmin.Shared.Models;
+@inject HttpClient Http
 
-<div class="modal fade" id="ManterProduto" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+<div class="modal fade" id="@Id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="ManterProdutoModalLabel">Modal title</h1>
@@ -13,22 +15,22 @@
                     <form>
                         <div class="form-group">
                             <label for="nome">Nome:</label>
-                            <input type="text" id="nome" class="form-control">
+                            <input type="text" id="nome" class="form-control"value="@Produto.Nome"  >
                         </div>
 
                         <div class="form-group">
                             <label for="descricao">Descrição:</label>
-                            <textarea id="descricao" class="form-control"></textarea>
+                            <textarea id="descricao" class="form-control" value="@Produto.Descricao"></textarea>
                         </div>
 
                         <div class="form-group">
                             <label for="categoria">Categoria:</label>
-                            <input type="text" id="categoria" class="form-control">
+                            <input type="text" id="categoria" class="form-control" value="@Produto.Categoria.Nome">
                         </div>
 
                         <div class="form-group">
                             <label for="preco">Preço:</label>
-                            <input type="text" id="preco" class="form-control">
+                            <input type="text" id="preco" class="form-control" value="@Produto.Preco">
                         </div>
 
                         <div class="form-group">
@@ -40,23 +42,13 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="seq">Seq:</label>
-                            <input type="text" id="seq" class="form-control">
-                        </div>
-
-                        <div class="form-group">
                             <label for="estoque">Estoque:</label>
-                            <input type="text" id="estoque" class="form-control">
+                            <input type="text" id="estoque" class="form-control" value="@Produto.Estoque">
                         </div>
 
                         <div class="form-group">
                             <label for="peso">Peso ou Quantidade:</label>
-                            <input type="text" id="peso" class="form-control">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="dimensoes">Dimensões:</label>
-                            <input type="text" id="dimensoes" class="form-control">
+                            <input type="text" id="peso" class="form-control" value="@Produto.PesoOuQuantidade">
                         </div>
 
                         <div class="form-group">
@@ -66,25 +58,25 @@
                             </select>
                         </div>
 
-                        <div class="form-group">
+       @*                 <div class="form-group">
                             <label for="disponibilidade">Disponibilidade:</label>
-                            <input type="text" id="disponibilidade" class="form-control">
+                            <input type="text" id="disponibilidade" class="form-control" value="@Produto.Nome">
                         </div>
-
-                        <div class="form-group">
+*@
+@*                 <div class="form-group">
                             <label for="palavras-chave">Palavras-chave:</label>
-                            <input type="text" id="palavras-chave" class="form-control">
-                        </div>
+                            <input type="text" id="palavras-chave" class="form-control" value="@Produto.Nome">
+                        </div>*@
 
-                        <div class="form-group">
+@*          <div class="form-group">
                             <label for="destaque">Destaque:</label>
-                            <input type="text" id="destaque" class="form-control">
+                            <input type="text" id="destaque" class="form-control"  value="@Produto.Nome" >
                         </div>
-
-                        <div class="form-group">
+*@
+          @*              <div class="form-group">
                             <label for="promocao">Produto em Promoção:</label>
                             <input type="text" id="promocao" class="form-control">
-                        </div>
+                        </div>*@
                     </form>
                 </div>
             </div>
@@ -97,5 +89,15 @@
 </div>
 
 @code {
+    [Parameter]
+    public string Id { get; set; }
+
+    [Parameter]
+    public ProdutoModel Produto { get; set; }
+
+    public void OnSubmit()
+    {
+
+    }
 
 }
